# SimulationGears_for_SpaceNav

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  SimulationGears_for_SpaceNav.code-workspace  TODO.md  run_new_tests.m
cmake/: cmake_utils.cmake
doc/: Doxyfile.in  build_script_doc.md  main_page.md
doc/developments/: cshape_model_define_shape_model_extension_plan.md
examples/: CMakeLists.txt
lib/: TODO
lib/yaml/+yaml/: EnsureSnakeYamlOnClasspath.m
lib/yaml/resources/: addons_core.xml  matlab_path_entries.xml  metadata.xml
matlab/: SetupSimGears.m
matlab/codegen_scripts/: codegen_laser_rangefinder_model.m  codegen_raytracing_functions.m
matlab/general_utils/: AverageFunctionTiming.m  CTrajectoryArcAnalyzer.m  ComputeLogSpacedValues.m  ComputeMeshModelVolumeAndCoM.m  ConvertETfromTimeFormat.m  ConvertTimeFormatFromET.m  EnumTrajectKernelName.m  GetManoeuvresFromSPK.m  LoadReferenceDataFromKernels.m  PlotTrajectoryArcAnalysis.m  RunTrajectoryArcAnalysis.m  SaveErrorBacktraceLog.m  getDirStruct.m
matlab/general_utils/datastructs/: CBaseDatastruct.m  CBaseDatastructWithTimes.m  CCameraIntrinsics.m  CSimulationState.m  EnumFrameName.m  SDatasetFromSimStateIntermediateRepr.m  SNavState.m  SPose3.m  SReferenceImagesDataset.m  SReferenceMissionDesign.m
matlab/general_utils/templates/: ClassName.m
matlab/simulationModels/: .gitignore  GNCsimulator_MoonOrbit.slx  aerodrag_gauss.m  perturbationJ2_gauss.m  simMain_MoonOrbit.m
matlab/simulationModels/attitudeModels/: CAttitudePointingGenerator.m  simulateTBPointing.m
matlab/simulationModels/dynamicsModels/: J_PBR4BP_planar.m  RHS_2BP.m  RHS_NbodySRP.m  RHS_PBR4BP_planar.m  codegen_evalRHS_DynOrbit.m  evalRHS_DynOrbit.m
matlab/simulationModels/gravityModels/: .gitignore  ExtSHE_GradU.m  ExtSHE_normFactors.m  SphericalHarmonics.m  buildSHEtrigLUT.m
matlab/simulationModels/sensorsModels/: FastRayTracePointVisibility.m  LaserRangefinderModel.m  RayTraceLaserBeam.m  codegen_GyrosModel.m  main_GyrosModel.m  simulation_GyrosModel.slx
matlab/simulation_management/: CModeManager.m  CSPICEkerLoader.m  CScenarioRegistry.m  CSimConfig.m  EnumPointGTsamplingMethod.m  EnumRotParams.m  EnumScenarioName.m
matlab/simulation_models/: .gitignore  callBlenderWithCORTO.bat
matlab/simulation_models/accelerations/: ApplyImpulsiveDeltaVError.m  BuildExtSphHarmExpBasis.m  BuildGravityModelMexTargets.m  BuildQuadsModelSRPDataFromObj.m  ComputeAeroDrag_Gauss.m  ComputeCannonballSRP.m  ComputeGravityFieldFitMetrics.m  ComputeJ2Perturbation_Gauss.m  ComputePolyhedronFaceEdgeData.m  ComputePolyhedronGravitySHfitDiagnostics.m  ComputeQuadsModelSRP.m  ComputeSolarRadPressure.m  ComputedSpherdRSC.m  EvalExtSphHarmExpInTargetFrame.m  EvalExtSphHarmExpInWorldFrame.m  EvalExtSphHarmSamplesInTargetFrame.m  EvalExtSphericalHarmExpCore.m  EvalJac_CannonballSRP.m  EvalJac_ExtSHE.m  EvalJac_ExtSphHarmExpInTargetFrame.m  EvalJac_ExtSphericalHarmExp.m  EvalPolyhedronGrav.m  EvalPolyhedronGravPerturbationSamples.m  ExtSHE_AccTB.m  ExtSHE_GradU.m  ExtSHE_GradUCore.m  FitGravityFieldExtSHEcoefficients.m  FitSpherHarmCoeffToPolyhedrGrav.m  FitSpherHarmonicsToPolyhedronGravityFromObj.m  GenerateFibonacciSpherePoints.m  GenerateShellPointSet.m  GetSphHarmNormalizationFactors.m  MapSphericalGradientToCartesian.m  PanelModelSRP.m  buildSHElegendreLUT.m  (+2 more)
python/: phase_angle_example.py  pyproject.toml.in
python/SimulationGears_for_SpaceNav/: __init__.py
src/: CMakeLists.txt
src/attitude/: CAttitudePointingGenerator.h
src/cmake/: SimulationGears_for_SpaceNavConfig.cmake.in
tests/: .gitignore  CMakeLists.txt  testFastRayTracePointVisibility.m  testIntersectionCheck.m  testIntersectionCheckFcns.m  testRayTracePointVisibility.m  testSimulationSetup.m
tests/experiments/class_call_and_codegen_in_slx/: SimulinkTestClass.m  do_class_operation.slx  slx_class_caller.m
tests/experiments/sfunction_impl_in_slx/: Sfunction_wrap_impl.slx
tests/matlab/: BuildTimegridFromWindows.m  CBasePlotter.m  CPointProjectionPlotter.m  testAttitudePointingGenerator.m  testCBaseDatastruct.m  testCBaseDatastructExport.m  testCBaseDatastructImport.m  testGeneralPropagator.m  testIntersectionCheckFcns.m  testLaserRangefinderModel.m  testLoadReferenceDataFromKernels.m  testRayTracePointVisibility.m  testScenarioGenerator.m  testSimsManagerTools.m  testSimulationObjects.m  testTargetEmulator.m  testVisibilityCheckFcn.m  testgenReferenceTraj.m
tests/matlab/.deprecated/: testGenReferenceTraj.m  testIntersectionCheckFcns.m  testScenarioGenerator.m
tests/matlab/general_utils/: testCTrajectoryArcAnalyzer.m  testYamlBatch.m
tests/matlab/general_utils/datastructs/: testCBaseDatastructExport.m  testCBaseDatastructImport.m  testDatasetConversionFromSimStateArray.m  testDatasetConversionFromSimStates.m
tests/matlab/measurements/: testRayEllipsoidIntersection.m
tests/matlab/simulation_management/: testCScenarioRegistry.m
tests/matlab/simulation_models/: testAttitudePointingGenerator.m  testCShapeModel.m  testCShapeModelSimplifyMesh.m  testSimulationObjects.m  testSimulationStateConversions.m
tests/matlab/simulation_models/accelerations/: testApplyImpulsiveDeltaVError.m  testComputeAeroDrag_Gauss.m  testComputeCannonballSRP.m  testComputeJ2Perturbation_Gauss.m  testComputeQuadsModelSRP.m  testEvalPolyhedronGrav.m  testExtSHE_CrossValidation.m  testFitSpherHarmCoeffToPolyhedrGrav.m
tests/matlab/simulation_models/dynamics/: testEvalJac_2BP.m  testEvalJac_CR3BP.m  testEvalRHS_GaussPlanetary.m  testPropagateClohessyWiltshireAnalytical.m  testRHS_2BP.m  testRHS_2BPwSTM.m  testRHS_CR3BP.m  testRHS_CR3BP_planar.m  testRHS_CR3BPwSTM.m  testRHS_PBR4BP_planar.m
tests/matlab/simulation_models/measurements/cameras/: testPinholeProjectArrayHP.m  testPinholeProjectHP.m
tests/matlab/simulation_models/measurements/common/: testRayTriangleIntersection.m
tests/matlab/test_helpers/: CBaseDatastructTestHelper.m
tests/matlab/tmp_test_samples/: baseDatastruct_test_sample.mat  baseDatastruct_test_sample.yml
tests/test_helpers/: CBaseDatastructTestHelper.m
(+131 files in other folders)
